Based on the changes in the diff, here is a concise commit message:
Refactor CompanyCheck logic, modernize test configuration, and clean up unused code

- Update `CompanyCheckApiIntegrationTests` to use `@MockitoBean` instead of the deprecated `@MockBean` for Spring Boot compatibility.
- Streamline `CompanyCheckService` by removing unused methods (`sok`, `alderDager`), constants (`ANNUAL_ACCOUNTS_EXPECTED_FORMS`), and simplifying diagnostic and scoring logic.
- Modernize Java code using `Math.clamp()` for score calculation and `List.getFirst()` in tests.
- Remove unused state (`totalElements`) and the `SectionHeading` component from the frontend `company-check-shell.tsx`.
- Refactor `CompanyCheckController` to make exception handlers public and remove unused `Timer` imports.
- Clean up `CompanyRoleSnapshotEntity` and `CompanyApiV1Mapper` by removing redundant accessors and unused method overloads.
- Update `TODO.md` to remove duplicate session resume instructions and consolidate the work log.